--- a/main.yml
+++ b/main.yml
@@ -63,6 +63,28 @@ automation-hub:
         title: My Imports
   git_repo: https://github.com/ansible/ansible-hub-ui
 
+catalog:
+  title: Catalog
+  api:
+    versions:
+      - v1
+    isBeta: true
+  channel: '#insights-svc-portal'
+  deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
+  frontend:
+    paths:
+      - /hybrid/catalog
+      - /ansible/catalog
+    sub_apps:
+      - id: portfolios
+        title: Portfolios
+        default: true
+      - id: platforms
+        title: Platforms
+      - id: orders
+        title: Orders
+      - id: approval
+
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
@@ -252,6 +274,15 @@ ruledev:
   frontend:
     paths:
       - /staging/ruledev
+
+settings-ansible:
+  title: Settings
+  frontend:
+    sub_apps:
+      - id: sources
+        reload: settings/sources
+      - id: rbac
+    suppress_id: true
 
 sources:
   title: Discovered Inventory
