--- a/main.yml
+++ b/main.yml
@@ -18,6 +18,28 @@ approval:
       - /ansible/catalog/approval
     reload: catalog/approval
 
+catalog:
+  title: Catalog
+  api:
+    versions:
+      - v1
+    isBeta: true
+  channel: '#insights-svc-portal'
+  deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
+  frontend:
+    paths:
+      - /hybrid/catalog
+      - /ansible/catalog
+    sub_apps:
+      - id: portfolios
+        title: Portfolios
+        default: true
+      - id: platforms
+        title: Platforms
+      - id: orders
+        title: Orders
+      - id: approval
+
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
@@ -207,6 +229,15 @@ ruledev:
   frontend:
     paths:
       - /staging/ruledev
+
+settings-ansible:
+  title: Settings
+  frontend:
+    sub_apps:
+      - id: sources
+        reload: settings/sources
+      - id: rbac
+    suppress_id: true
 
 sources:
   title: Discovered Inventory
