Change name to Applications

--- a/main.yml
+++ b/main.yml
@@ -348,6 +348,9 @@ rhel:
 
 settings:
   title: Settings
+  top_level: true
+  isBeta: true
+  deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
   frontend:
     sub_apps:
       - id: ''
@@ -356,23 +359,20 @@ settings:
       - id: hooks
       - id: sources
       - id: rbac
-      - id: sites
-  top_level: true
+      - id: applications
+    paths:
+      - /settings/applications
+
+applications:
+  title: Applications
   isBeta: true
   deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
-  paths:
-    - /settings
-
-sites:
-  title: Applications
   frontend:
     sub_apps:
       - id: insights
         title: Insights
-  isBeta: true
-  deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
-  paths:
-    - /settings/sites
+    paths:
+      - /settings/applications
 
 ruledev:
   title: Rule Development
