--- a/main.yml
+++ b/main.yml
@@ -418,24 +418,40 @@ staging:
   frontend:
     sub_apps:
       - id: ruledev
-      - id: subscriptions
   top_level: true
 
 subscriptions:
-  title: Subscription Reporting
+  title: Subscription Watch
   api:
     versions:
       - v1
-    tags:
-      - value: "experimental"
-        title: "Experimental API"
     isBeta: true
   channel: '#subscriptions'
   deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
+  top_level: true
   frontend:
     paths:
-      - /staging/subscriptions
+      - /subscriptions
+    sub_apps:
+      - id: rhel-sw
+        default: true
   git_repo: https://github.com/RedHatInsights/curiosity-frontend
+
+rhel-sw:
+  title: Red Hat Enterprise Linux
+  frontend:
+    sub_apps:
+      - id: all
+        title: All
+        default: true
+      - id: arm
+        title: ARM
+      - id: ibmpower
+        title: IBM Power
+      - id: ibmz
+        title: IBM Z systems
+      - id: x86
+        title: x86
 
 vulnerability:
   title: Vulnerability Management
