--- a/main.yml
+++ b/main.yml
@@ -108,6 +108,17 @@ compliance:
   frontend:
     paths:
       - /rhel/compliance
+    sub_apps:
+      - id: ''
+        title: Reports
+        default: true
+        reload: compliance
+      - id: policies
+        title: Policies
+        reload: compliance/policies
+      - id: systems
+        title: Systems
+        reload: compliance/systems
 
 config:
   title: Cloud Services Config
