--- a/main.yml
+++ b/main.yml
@@ -230,6 +230,18 @@ openshift:
         title: Subscriptions
         group: openshift
   top_level: true
+  
+rbac:
+  title: Role-based Access Control
+  api:
+    versions:
+      - v1
+    isBeta: true
+  deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
+  frontend:
+    title: User Access Management
+    paths:
+      - /settings/rbac
 
 remediations:
   title: Remediations
@@ -286,8 +298,9 @@ settings:
   deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
   frontend:
     sub_apps:
-      - id: applications
+      - id: rbac
         default: true
+      - id: applications
     paths:
       - /settings
 
