Fix cost management cost models link title
Signed-off-by: Boaz Shuster <boaz.shuster.github@gmail.com>

--- a/main.yml
+++ b/main.yml
@@ -152,7 +152,7 @@ cost-management:
         title: Cloud details
         group: cost-management
       - id: cost-models
-        title: Cost model
+        title: Cost models
         group: cost-management
       - id: settings-cost-management
   git_repo: https://github.com/project-koku/
