add custom policies to staging

--- a/main.yml
+++ b/main.yml
@@ -158,6 +158,13 @@ cost-management:
   git_repo: https://github.com/project-koku/
   mailing_list: cost-mgmt@redhat.com
 
+custom-policies:
+  title: Custom Policies
+  channel: '#cloudservices-custom-policies'
+  deployment_repo: https://github.com/RedHatInsights/custom-policies-ui-frontend-build
+  frontend:
+    paths: /staging/custom-policies
+
 dashboard:
   title: Dashboard
   channel: '#flip-mode-squad'
@@ -440,6 +447,7 @@ staging:
   frontend:
     sub_apps:
       - id: ruledev
+      - id: custom-policies
   top_level: true
 
 storybook:
