Add sub-apps for compliance (#106)
* Add sub-apps for compliance

We were asked to split the app into Reports, Policies and Systems

* Add isBeta

* Remove reload

* Set ID to blank string for reports

--- a/main.yml
+++ b/main.yml
@@ -104,10 +104,19 @@ compliance:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend:
     paths:
       - /rhel/compliance
+    sub_apps:
+      - id: ''
+        title: Reports
+        default: true
+      - id: policies
+        title: Policies
+      - id: systems
+        title: Systems
 
 config:
   title: Cloud Services Config
