--- a/main.yml
+++ b/main.yml
@@ -353,7 +353,7 @@ rbac:
     isBeta: true
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
   frontend:
-    title: User Access Management
+    title: User access
     paths:
       - /settings/rbac
     sub_apps:
