Config change for Settings bundle

--- a/main.yml
+++ b/main.yml
@@ -15,10 +15,19 @@ api-docs:
       - /docs/api
       - /docs
 
+application-settings:
+  title: Settings
+  frontend:
+    deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
+    sub_apps:
+      - id: ''
+        title: 'General'
+      - id: applications
+
 applications:
   title: Applications
   frontend:
-    app_base: settings
+    app_base: application-settings
     sub_apps:
       - id: insights
         title: Insights
@@ -293,14 +302,11 @@ settings-ansible:
 settings:
   title: Settings
   top_level: true
-  deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
   frontend:
     sub_apps:
       - id: rbac
         default: true
-      - id: applications
-    paths:
-      - /settings
+      - id: application-settings
 
 sources:
   title: Discovered Inventory
