--- a/main.yml
+++ b/main.yml
@@ -16,7 +16,7 @@ api-docs:
       - /docs/api
       - /docs
 
-application-settings:
+applications:
   title: Applications
   deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
   frontend:
@@ -426,17 +426,18 @@ settings:
   top_level: true
   frontend:
     sub_apps:
-      - id: settings-general
+      - id: general
+        title: General
         default: true
       - id: hooks
       - id: sources
       - id: rbac
-      - id: application-settings
+      - id: applications
 
 settings-general:
   title: General
   frontend:
-    app_base: application-settings
+    app_base: applications
     paths:
       - /settings
       - /settings/general
