Permissions args is an array, so use them as array

--- a/main.yml
+++ b/main.yml
@@ -25,7 +25,8 @@ applications:
         title: Insights
         permissions:
           method: isEntitled
-          args: insights
+          args:
+            - insights
     paths:
       - /settings/applications
 
