Re-add prefix config param for transition safety

--- a/releases.yml
+++ b/releases.yml
@@ -5,6 +5,7 @@ Stable:
 Beta:
   source_env: prod
   branch: prod-beta
+  prefix: /beta
   url_prefix: /beta
   content_path_prefix: /beta
 
@@ -18,5 +19,6 @@ PenTestBeta:
   source_env: qa
   branch: qa-beta
   cookie_required: True
+  prefix: /beta
   url_prefix: /beta
   content_path_prefix: /pentest/beta
