--- a/main.yml
+++ b/main.yml
@@ -18,8 +18,8 @@ api-docs:
 
 applications:
   title: Applications
+  deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
   frontend:
-    app_base: settings
     sub_apps:
       - id: insights
         title: Insights
@@ -407,18 +407,23 @@ ruledev:
 settings:
   title: Settings
   top_level: true
-  deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
   frontend:
     sub_apps:
-      - id: ''
+      - id: general
+        title: General
         default: true
-        title: 'General'
       - id: hooks
       - id: sources
       - id: rbac
       - id: applications
+
+settings-general:
+  title: General
+  frontend:
+    app_base: applications
     paths:
       - /settings
+      - /settings/general
 
 sources:
   title: Discovered Inventory
