Add apiName to advisor API so we generate the doc URL correctly

--- a/main.yml
+++ b/main.yml
@@ -3,6 +3,7 @@ advisor:
   api:
     versions:
       - v1
+    apiName: insights
   channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-advisor-frontend-build
   frontend:
