Fix app level settings cost mgmt entitlement check
Fix entitlement check to look for `cost_management`
https://github.com/RedHatInsights/entitlements-api-go/blob/e1dec7e18517f6148fe9ef7516741b8f2179ecc9/bundles/bundles.yml#L14

--- a/main.yml
+++ b/main.yml
@@ -49,7 +49,7 @@ applications:
         permissions:
           method: isEntitled
           args:
-            - cost-management
+            - cost_management
       - id: custom-policies
         title: Custom Policies
     paths:
