--- a/main.yml
+++ b/main.yml
@@ -102,7 +102,7 @@ automation-hub:
   git_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
-  title: Catalog
+  title: Automation Services Catalog
   api:
     versions:
       - v1
