--- a/main.yml
+++ b/main.yml
@@ -47,9 +47,7 @@ applications:
       - id: cost-management
         title: Cost Management
         permissions:
-          method: isEntitled
-          args:
-            - cost_management
+          method: isOrgAdmin
     paths:
       - /settings/applications
 
