Update ID for cost-management details

--- a/main.yml
+++ b/main.yml
@@ -205,7 +205,7 @@ details:
       - id: ocp
         title: OpenShift
         default: true
-      - id: infrastructure
+      - id: aws
         title: Infrastructure
 
 policies:
